--- a/css/style.scss
+++ b/css/style.scss
@@ -108,3 +108,19 @@ body {
   bottom: 0;
   background-color: #000;
 }
+
+#infochild {
+  font-size: 2.6rem;
+  display: grid;
+  grid-auto-flow: row;
+}
+
+#strength {
+  text-align: center;
+  background-color: rgb(227, 42, 54);
+}
+
+#lives {
+  text-align: center;
+  background-color: rgb(21, 174, 1);
+}
